fixed camel casing, now using class list instead of attribute for modal visibility, fixed the look of the modal to match the design

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -81,7 +81,7 @@
   max-width: 430px;
   width: 100%;
   border-width: 0 0 1px;
-  border-color: black;
+  border-color: rgba(0, 0, 0, 0.2);
   outline: none;
   padding: 0px;
   padding-bottom: 13px;
@@ -91,10 +91,19 @@
   margin-bottom: 29px;
 }
 
+.modal__close:hover {
+  opacity: 60%;
+}
+
+.modal__button:hover {
+  opacity: 60%;
+}
+
 @media screen and (max-width: 580px) {
   .modal__container {
     max-width: 282px;
     max-height: 322px;
+
     padding: 25px 22px;
   }
 
@@ -111,5 +120,12 @@
     left: calc(100% - 30px);
     height: 26px;
     width: 26px;
+  }
+
+  .modal__heading {
+    font-size: 18px;
+    line-height: 21.78px;
+    max-width: 238px;
+    margin: 0 0 75px 0;
   }
 }
